--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GestionNotasUjaenAlumno</string>
+    <string name="app_name">Notas Alumno</string>
 
 </resources>
